--- a/translations/translations.csv
+++ b/translations/translations.csv
@@ -1,2 +1,5 @@
 key,us,br
 COLLECTED_SOULS,Collected souls,Almas coletadas
+IDIOMA,Language,Idioma
+FULLSCREEN,Fullscreen,Tela cheia
+HABILITADO,Enabled,Habilitado
